# cv-screener

./: .gitignore  Dockerfile  README.md  criteria.yaml  cv_screener.py  pyproject.toml  render.yaml  run.sh  test.sh  webapp.py
templates/: index.html
